--- a/stackgres-k8s/install/helm/stackgres-operator/Chart.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 name: stackgres-operator
 version: 0.9-SNAPSHOT
-kubeVersion: "1.11.0-0 - 1.18.0-0"
+kubeVersion: "1.11.0-0 - 1.17.x"
 description: StackGres Operator
 keyworkds:
   - stackgres
