--- a/stackgres-k8s/src/pom.xml
+++ b/stackgres-k8s/src/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>io.stackgres</groupId>
   <artifactId>stackgres-parent</artifactId>
-  <version>0.8-SNAPSHOT</version>
+  <version>0.8</version>
   <packaging>pom</packaging>
   <name>Parent POM</name>
 
