--- a/stackgres-k8s/src/operator/src/test/docker/Dockerfile.it
+++ b/stackgres-k8s/src/operator/src/test/docker/Dockerfile.it
@@ -11,4 +11,6 @@ RUN wget -q -O /bin/kubectl https://storage.googleapis.com/kubernetes-release/re
 RUN chmod a+x /bin/kubectl
 RUN wget -q -O /bin/kind  https://github.com/kubernetes-sigs/kind/releases/download/v0.6.0/kind-$(uname)-amd64
 RUN chmod a+x /bin/kind
+RUN wget -q -O /bin/k3d https://github.com/rancher/k3d/releases/download/v1.5.1/k3d-linux-amd64
+RUN chmod a+x /bin/k3d
 RUN wget -q https://get.helm.sh/helm-v2.16.1-linux-amd64.tar.gz -O -|tar xz --strip-components=1 -C /bin -f - linux-amd64/helm
