--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,7 +25,7 @@ variables:
   DISABLE_IT: "true"
   E2E_PARALLELISM: 12
   E2E_ENV: k3d
-  E2E_KUBERNETES_VERSION: 1.17.2
+  K8S_FROM_DIND: 1.17.2
   E2E_PARALLELISM: 32
   RESET_KIND: "true"
 
