--- a/stackgres-k8s/e2e/spec/eks/backup-with-s3-storage.values.yaml
+++ b/stackgres-k8s/e2e/spec/eks/backup-with-s3-storage.values.yaml
@@ -11,7 +11,8 @@ config:
     minio:
       create: false
     s3:
-      prefix: s3://stackgres-e2e-backup-with-s3-storage
+      prefix: s3://stackgres-e2e
+      region: eu-west-2
       accessKey:
           name: s3-credentials
           key: accessKeyId
