feat: e2e test can now use a private ECR to store a new operator image
This allow us to test changes in different clouds before a public image has been generated

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/service-account.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/service-account.yaml
@@ -4,4 +4,8 @@ kind: ServiceAccount
 metadata:
   name: {{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
+{{- if .Values.serviceAccount.repoCredentials }}
+imagePullSecrets:
+- name: {{ .Values.serviceAccount.repoCredentials }}
+{{- end }}
 {{- end }}
