feat: Automated test of backups with azure blobs

--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/backupconfig-cr.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/backupconfig-cr.yaml
@@ -110,7 +110,7 @@ spec:
       prefix: "{{ .Values.config.backup.azureblob.prefix }}"
       credentials:
         account:
-          name: "{{ .Values.config.backup.azureblobk.account.name }}"
+          name: "{{ .Values.config.backup.azureblob.account.name }}"
           key: "{{ .Values.config.backup.azureblob.account.key }}"
         accessKey:
           name: "{{ .Values.config.backup.azureblob.accessKey.name }}"
