--- a/stackgres-k8s/install/helm/stackgres-operator/templates/deployment.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/deployment.yaml
@@ -1,4 +1,3 @@
-{{ if .Values.deploy.create }}
 apiVersion: "apps/v1"
 kind: "Deployment"
 metadata:
@@ -24,6 +23,7 @@ spec:
     spec:
       serviceAccountName: {{ .Release.Name }}
       containers:
+      {{- if .Values.deploy.create }}
       - name: {{ .Release.Name }}
         image: "{{ .Values.image.name }}:{{ .Values.image.tag }}"
         imagePullPolicy: {{ .Values.image.pullPolicy }}
@@ -85,6 +85,7 @@ spec:
           - name: operator-certs
             mountPath: /etc/operator/certs
             readOnly: true
+      {{- end }}
       - name: {{ .Release.Name }}-nginx
         image: "nginx:1.17.4-alpine"
         imagePullPolicy: IfNotPresent
@@ -143,4 +144,3 @@ spec:
         - name: operator-nginx
           configMap:
             name: {{ .Release.Name }}-nginx
-{{ end }}
