--- a/stackgres-k8s/install/helm/stackgres-operator/templates/nginx-configmap.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/nginx-configmap.yaml
@@ -33,7 +33,7 @@ data:
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_pass http://localhost:8080;
+        proxy_pass http://{{ .Release.Name }}-api:8080;
       }
       
       location / {
