--- a/stackgres-k8s/install/helm/stackgres-cluster/templates/pgbouncerconfig-cr.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/templates/pgbouncerconfig-cr.yaml
@@ -1,5 +1,5 @@
 {{ if .Values.config.create }}
-apiVersion: stackgres.io/{{ .Values.crd.version }}
+apiVersion: stackgres.io/v1alpha1
 kind: StackGresConnectionPoolingConfig
 metadata:
   name: {{ .Values.cluster.poolingconfig }}
