--- a/stackgres-k8s/install/helm/stackgres-operator/crds/backup-config-crd.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/crds/backup-config-crd.yaml
@@ -1,13 +1,13 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: sgbackupconfigs.{{ .Values.group }}
+  name: sgbackupconfigs.stackgres.io
   annotations:
     "helm.sh/hook": crd-install
 spec:
-  group: {{ .Values.group }}
+  group: stackgres.io
   versions:
-    - name: {{ .Values.crd.version }}
+    - name: v1alpha1
       served: true
       storage: true
   scope: Namespaced
@@ -48,7 +48,6 @@ spec:
               type: integer
               description: "To configure how many concurrency streams are reading disk during uploads. By default 1 stream."
             pgpConfiguration:
-              type: string
               type: object
               description: "The OpenPGP configuration for encryption and decryption backups with the following properties: - key: PGP private key"
               properties:
