--- a/stackgres-k8s/install/helm/stackgres-operator/crds/cluster-crd.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/crds/cluster-crd.yaml
@@ -1,13 +1,13 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: sgclusters.{{ .Values.group }}
+  name: sgclusters.stackgres.io
   annotations:
     "helm.sh/hook": crd-install
 spec:
-  group: {{ .Values.group }}
+  group:  stackgres.io
   versions:
-    - name: {{ .Values.crd.version }}
+    - name: v1alpha1
       served: true
       storage: true
   scope: Namespaced
