--- a/stackgres-k8s/install/helm/stackgres-operator/crds/profile-crd.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/crds/profile-crd.yaml
@@ -1,13 +1,11 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: sgprofiles.{{ .Values.group }}
-  annotations:
-    "helm.sh/hook": crd-install
+  name: sgprofiles.stackgres.io
 spec:
-  group: {{ .Values.group }}
+  group:  stackgres.io
   versions:
-    - name: {{ .Values.crd.version }}
+    - name: v1alpha1
       served: true
       storage: true
   scope: Namespaced
