--- a/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-role.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/cluster-role.yaml
@@ -63,7 +63,7 @@ rules:
   - get
   - list
   - watch
-- apiGroups: ["{{ .Values.group }}"]
+- apiGroups: ["stackgres.io"]
   resources:
   - sgclusters
   verbs:
@@ -74,7 +74,7 @@ rules:
   - patch
   - create
   - delete
-- apiGroups: ["{{ .Values.group }}"]
+- apiGroups: ["stackgres.io"]
   resources:
   - sgpgconfigs
   - sgprofiles
