--- a/stackgres-k8s/src/operator/pom.xml
+++ b/stackgres-k8s/src/operator/pom.xml
@@ -20,7 +20,7 @@
     <stackgres.operatorVersion>${project.version}</stackgres.operatorVersion>
     <stackgres.containerBuild>3-dev</stackgres.containerBuild>
     <stackgres.group>stackgres.io</stackgres.group>
-    <stackgres.crd.version>v1beta1</stackgres.crd.version>
+    <stackgres.crd.version>v1alpha1</stackgres.crd.version>
     <stackgres.prometheus.allowAutobind>true</stackgres.prometheus.allowAutobind>
     <stackgres.prometheus.grafanaEmbedded>false</stackgres.prometheus.grafanaEmbedded>
 
