feat: Default mutator for cluster restoration configuration values

--- a/stackgres-k8s/src/operator/src/main/resources/restore-default-values.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/restore-default-values.properties
@@ -1,14 +1,3 @@
-compressionMethod=lz4
-source.fromStorage.type=s3
-source.fromStorage.s3.credentials.accessKey.key=accesskey
-source.fromStorage.s3.credentials.accessKey.name=minio
-source.fromStorage.s3.credentials.secretKey.key=secretkey
-source.fromStorage.s3.credentials.secretKey.name=minio
-source.fromStorage.s3.endpoint=http://minio.stackgres.svc:9000
-source.fromStorage.s3.forcePathStyle=true
-source.fromStorage.s3.prefix=s3://stackgres
-source.fromStorage.s3.region=k8s
-source.backupName=LATEST
-source.autoCopySecrets=false
+autoCopySecrets=true
 downloadDiskConcurrency=1
 
