feat: allow to specify service as a node port

--- a/stackgres-k8s/install/helm/stackgres-operator/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/values.yaml
@@ -3,6 +3,10 @@ image:
   tag: "development-jvm"
   pullPolicy: "IfNotPresent"
 
+service:
+  type: ClusterIP
+  #nodePort:
+
 serviceAccount:
   create: true
 
