--- a/stackgres-k8s/install/helm/stackgres-operator/templates/service.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/service.yaml
@@ -20,11 +20,15 @@ spec:
   {{- end }}
   selector:
     app: {{ .Release.Name }}
+  type: '{{ .Values.service.type }}'
   ports:
     - name: https
       protocol: TCP
       port: 443
       targetPort: 443
+      {{- with .Values.service.nodePort }}
+      nodePort: {{ . }}
+      {{- end }}
 {{ if not (and .Values.developer.externalOperatorIp .Values.developer.externalOperatorPort) }}
 ---
 apiVersion: v1
