feat: allow to specify service as a node port

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/service.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/service.yaml
@@ -6,11 +6,15 @@ metadata:
 spec:
   selector:
     app: {{ .Release.Name }}
+  type: '{{ .Values.service.type }}'
   ports:
     - name: https
       protocol: TCP
       port: 443
       targetPort: 443
+      {{- with .Values.service.nodePort }}
+      nodePort: {{ . }}
+      {{- end }}
 {{ if not (and .Values.developer.externalOperatorIp .Values.developer.externalOperatorPort) }}
 ---
 apiVersion: v1
