feat: changed default backup full schedule to be each 2 minutes

--- a/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
@@ -16,8 +16,8 @@ config:
   backup:
     create: true
     retention: 5
-    fullSchedule: "0 5 * * *"
-    fullWindow: 60
+    fullSchedule: "*/2 * * * *"
+    fullWindow: 2
     compressionMethod: lz4
     uploadDiskConcurrency: 1
     tarSizeThreshold: 1073741823
