feat: prometheus operator and grafana embedding in operator chart

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/deployment.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/deployment.yaml
@@ -54,8 +54,8 @@ spec:
             valueFrom:
               fieldRef:
                 fieldPath: status.podIP
-          {{- if and .Values.grafana.url .Values.grafana.token .Values.grafana.httpHost }}
-          - name: GRAFANA_EMBEDDED          
+          {{- if and .Values.grafana.url .Values.grafana.token .Values.grafana.webHost }}
+          - name: GRAFANA_EMBEDDED
             value: "true"
           {{ end }}
         ports:
@@ -88,7 +88,43 @@ spec:
       - name: {{ .Release.Name }}-nginx
         image: "nginx:1.17.4-alpine"
         imagePullPolicy: IfNotPresent
-        args: [ '/bin/sh', '-exc', 'cat /etc/nginx/conf.d/stackgres-operator.conf; nginx -g "daemon off;";' ]
+        env:
+          {{- if and .Values.grafana.url .Values.grafana.token .Values.grafana.webHost }}
+          - name: GRAFANA_EMBEDDED
+            value: "true"
+          - name: GRAFANA_URL_PATH
+            value: "{{ regexReplaceAll "^https?://[^/]+(/.*)$" .Values.grafana.url "${1}" }}"
+          - name: GRAFANA_SCHEME
+            value: "{{ default "http" .Values.grafana.scheme }}"
+          - name: GRAFANA_WEB_HOST
+            value: "{{ regexReplaceAll "/" .Values.grafana.webHost "" }}"
+          - name: GRAFANA_TOKEN
+            value: "{{ .Values.grafana.token }}"
+          {{- else }}
+          - name: GRAFANA_URL_PATH
+            value: "/"
+          - name: GRAFANA_SCHEME
+            value: "http"
+          - name: GRAFANA_WEB_HOST
+            value: "localhost:8080"
+          - name: GRAFANA_TOKEN
+            value: "unknown"
+          {{- end }}
+        args:
+          - '/bin/sh'
+          - '-exc'
+          - |
+            
+            envsubst '
+              $GRAFANA_EMBEDDED
+              $GRAFANA_URL_PATH
+              $GRAFANA_SCHEME
+              $GRAFANA_WEB_HOST
+              $GRAFANA_TOKEN' \
+              < /etc/nginx/template.d/stackgres-operator.template \
+              > /etc/nginx/conf.d/stackgres-operator.conf
+            cat /etc/nginx/conf.d/stackgres-operator.conf
+            exec nginx-debug -g 'daemon off;'
         ports:
         - containerPort: 443
           name: "https"
@@ -98,7 +134,7 @@ spec:
             mountPath: /etc/operator/certs
             readOnly: true
           - name: operator-nginx
-            mountPath: /etc/nginx/conf.d
+            mountPath: /etc/nginx/template.d
             readOnly: true
       volumes:
         - name: operator-certs
