--- a/stackgres-k8s/install/helm/stackgres-operator/templates/mutator-webhook-configuration.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/mutator-webhook-configuration.yaml
@@ -2,7 +2,7 @@
 apiVersion: admissionregistration.k8s.io/v1beta1
 kind: MutatingWebhookConfiguration
 metadata:
-  name: {{ .Release.Name }}-sgcluster
+  name: {{ .Release.Name }}
   namespace: {{ .Release.Namespace }}
 webhooks:
   - name: sgcluster.{{ .Release.Name }}.{{ .Release.Namespace }}
@@ -19,13 +19,6 @@ webhooks:
         name: {{ .Release.Name }}
         path: '/stackgres/mutation/sgcluster'
       caBundle: {{ .Values.cert.crt }}
----
-apiVersion: admissionregistration.k8s.io/v1beta1
-kind: MutatingWebhookConfiguration
-metadata:
-  name: {{ .Release.Name }}-sgpgconfig
-  namespace: {{ .Release.Namespace }}
-webhooks:
   - name: sgpgconfig.{{ .Release.Name }}.{{ .Release.Namespace }}
     sideEffects: None
     rules:
@@ -40,13 +33,6 @@ webhooks:
         name: {{ .Release.Name }}
         path: '/stackgres/mutation/sgpgconfig'
       caBundle: {{ .Values.cert.crt }}
----
-apiVersion: admissionregistration.k8s.io/v1beta1
-kind: MutatingWebhookConfiguration
-metadata:
-  name: {{ .Release.Name }}-sgconnectionpoolingconfig
-  namespace: {{ .Release.Namespace }}
-webhooks:
   - name: sgconnectionpoolingconfig.{{ .Release.Name }}.{{ .Release.Namespace }}
     sideEffects: None
     rules:
@@ -61,13 +47,6 @@ webhooks:
         name: {{ .Release.Name }}
         path: '/stackgres/mutation/sgconnectionpoolingconfig'
       caBundle: {{ .Values.cert.crt }}
----
-apiVersion: admissionregistration.k8s.io/v1beta1
-kind: MutatingWebhookConfiguration
-metadata:
-  name: {{ .Release.Name }}-sgprofile
-  namespace: {{ .Release.Namespace }}
-webhooks:
   - name: sgprofile.{{ .Release.Name }}.{{ .Release.Namespace }}
     sideEffects: None
     rules:
@@ -82,13 +61,6 @@ webhooks:
         name: {{ .Release.Name }}
         path: '/stackgres/mutation/sgprofile'
       caBundle: {{ .Values.cert.crt }}
----
-apiVersion: admissionregistration.k8s.io/v1beta1
-kind: MutatingWebhookConfiguration
-metadata:
-  name: {{ .Release.Name }}-sgbackupconfig
-  namespace: {{ .Release.Namespace }}
-webhooks:
   - name: sgbackupconfig.{{ .Release.Name }}.{{ .Release.Namespace }}
     sideEffects: None
     rules:
@@ -103,13 +75,6 @@ webhooks:
         name: {{ .Release.Name }}
         path: '/stackgres/mutation/sgbackupconfig'
       caBundle: {{ .Values.cert.crt }}
----
-apiVersion: admissionregistration.k8s.io/v1beta1
-kind: MutatingWebhookConfiguration
-metadata:
-  name: {{ .Release.Name }}-sgbackup
-  namespace: {{ .Release.Namespace }}
-webhooks:
   - name: sgbackup.{{ .Release.Name }}.{{ .Release.Namespace }}
     sideEffects: None
     rules:
